--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runthered",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A library for calling Run The Red's APIs from node.",
   "main": "index.js",
   "directories": {
@@ -19,7 +19,8 @@
   },
   "devDependencies": {
     "chai": ">=3.0.0",
-    "nock": ">=2.0.0"
+    "nock": ">=2.0.0",
+    "mocha": ">=2.0.0"
   },
   "keywords": [
     "api",
